# gerrit-mcp-server

./: Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
docs/: available_tools.md
gerrit_mcp_server/: gerrit_auth.py  gerrit_config.sample.json  gerrit_urls.py  main.py
tests/unit/: test_gerrit_auth.py  test_gerrit_urls.py  test_list_change_comments.py  test_main.py  test_post_bulk_comments.py  test_post_review_comment.py  test_reply_to_comment.py  test_submit_change.py  test_tool_registration.py
