[project]
name = "gerrit-mcp-server"
version = "1.0.0"
description = "An MCP server for interacting with Gerrit via curl"
requires-python = ">=3.12"
dependencies = [
    "mcp==1.21.2",
    "uvicorn==0.38.0",
    "websockets==15.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-env"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--asyncio-mode=auto -v --ignore=tests/e2e"
env = [
    "GERRIT_CONFIG_PATH=tests/test_config.json"
]

[tool.setuptools]
packages = ["gerrit_mcp_server"]

[tool.setuptools.package-data]
gerrit_mcp_server = ["*.json"]
